--- a/sidepanel/sidepanel.css
+++ b/sidepanel/sidepanel.css
@@ -16,7 +16,7 @@ iframe {
   flex-direction: row;
   align-items: center;
   background-color: #d0d0d0;
-  padding: 5px 5px 0px 5px;
+  padding: 5px 5px 5px 5px;
   border-bottom: 1px solid #e0e0e0;
 }
 
@@ -28,9 +28,8 @@ iframe {
   flex-direction: row;
   align-items: center;
   background-color: #d0d0d0;
-  padding: 15px 10px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  padding: 8px 10px;
+  border-radius: 8px;
   box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
   border: 1px solid #dbd1d1;
   cursor: pointer;
